deploy/4-migrations.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: testserver
  name: test-server-migration
spec:
  restartPolicy: Never
  containers:
  - name: migration
    image: xdu31/test-server-db-migrate:latest
    imagePullPolicy: Always
    args:
    - "--database.dsn"
    - "$(dsn)"
    - up
